--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,28 +1,30 @@
 workflows:
   ios-app:
-    name: Build and Deploy iOS App
+    name: iOS Build
     environment:
       xcode: latest
+      cocoapods: default
       vars:
-        BUNDLE_ID: "om.golstan.arkit.new.Zauber"
+        XCODE_WORKSPACE: "Harry Pokker.xcworkspace"
+        XCODE_SCHEME: "Harry Pokker"
     scripts:
+      - name: Install dependencies
+        script: |
+          gem install cocoapods
+          pod install
       - name: Build .ipa file
         script: |
-          xcodebuild -project "Harry Pokker.xcodeproj" \
-          -scheme "Harry Pokker" \
+          xcodebuild -workspace $XCODE_WORKSPACE \
+          -scheme $XCODE_SCHEME \
           -sdk iphoneos \
           -configuration Release \
-          -archivePath $HOME/output/HarryPokker.xcarchive archive
+          -archivePath $HOME/output/HarryPokker.xcarchive archive \
+          -allowProvisioningUpdates
+      - name: Export .ipa
+        script: |
           xcodebuild -exportArchive \
           -archivePath $HOME/output/HarryPokker.xcarchive \
-          -exportOptionsPlist exportOptions.plist \
+          -exportOptionsPlist ./exportOptions.plist \
           -exportPath $HOME/output
     artifacts:
       - $HOME/output/*.ipa
-    publishing:
-      email:
-        recipients:
-          - "your-email@example.com"
-        notify:
-          success: true
-          failure: true
