--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,7 +6,7 @@ workflows:
       xcode: latest
       cocoapods: default
       ios_signing:
-        distribution_type: ad_hoc
+        distribution_type: development
         bundle_identifier: "om.golstan.arkit.new.Zauber"
     scripts:
       - name: Set up CocoaPods
