--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,29 +1,31 @@
 workflows:
-  ios-project-debug: # workflow ID
-    name: iOS debug # workflow name
+  simulator-native-ios:
+    name: iOS simulator build
+    max_build_duration: 120
+    instance_type: mac_mini_m2
     environment:
-      xcode: latest
-      cocoapods: default
       vars:
           XCODE_PROJECT: "Harry Pokker.xcodeproj" # <-- Put the name of your project here. 
-          XCODE_SCHEME: "Harry Pokker" # <-- Put the name of your scheme here.
+          XCODE_SCHEME: "Harry Pokker"
+      xcode: 13.0
+      cocoapods: default
     scripts:
-      - name: Run tests
-        script: |
-          xcodebuild \
-          -project "$XCODE_PROJECT" \
-          -scheme "$XCODE_SCHEME" \
-          -sdk iphonesimulator \
-          -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.1' \
-          clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO          
-      - name: Build debug app
-        script: |
-          xcodebuild build -project "$XCODE_PROJECT" \
-          -scheme "$XCODE_SCHEME" \
-          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO          
+      - name: Install CocoaPods dependencies
+        script: | 
+          pod install
+      - name: Build the .app
+        script: | 
+          xcodebuild build \
+            -workspace "$XCODE_WORKSPACE" \
+            -scheme "$XCODE_SCHEME" \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=18.0' \
+            -configuration Debug \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO 
     artifacts:
+      - /tmp/xcodebuild_logs/*.log
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
-    publishing:
-      email:
-        recipients:
-          - hamidrdeveloper@gmail.com
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+
