--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,16 +5,25 @@ workflows:
     instance_type: mac_mini_m2
     environment:
       vars:
-          XCODE_PROJECT: "Harry Pokker.xcodeproj" # <-- Put the name of your project here. 
-          XCODE_SCHEME: "Harry Pokker"
+        XCODE_PROJECT: "Harry Pokker.xcodeproj"  # Your project file name here
+        XCODE_SCHEME: "Harry Pokker"            # Your Xcode scheme name here
+        XCODE_WORKSPACE: "Harry Pokker.xcworkspace" # Ensure workspace is set correctly
       xcode: 16.0
       cocoapods: default
     scripts:
       - name: Install CocoaPods dependencies
-        script: | 
+        script: |
+          if [ ! -f "Podfile" ]; then
+            echo "No Podfile found, generating one..."
+            pod init
+            echo "platform :ios, '13.0'" > Podfile
+            echo "target 'Harry Pokker' do" >> Podfile
+            echo "  use_frameworks!" >> Podfile
+            echo "end" >> Podfile
+          fi
           pod install
       - name: Build the .app
-        script: | 
+        script: |
           xcodebuild build \
             -workspace "$XCODE_WORKSPACE" \
             -scheme "$XCODE_SCHEME" \
@@ -23,9 +32,8 @@ workflows:
             -configuration Debug \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO 
+            CODE_SIGNING_ALLOWED=NO
     artifacts:
       - /tmp/xcodebuild_logs/*.log
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
-
