--- a/exportOptions.plist
+++ b/exportOptions.plist
@@ -2,11 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>method</key>
-    <string>development</string>
-    <key>teamID</key>
-    <string>127173896</string>
-    <key>signingStyle</key>
-    <string>automatic</string>
+  <key>method</key>
+  <string>app-store</string>
+  <key>teamID</key>
+  <string>127173896</string> <!-- Replace with your Apple Team ID -->
+  <key>uploadSymbols</key>
+  <true/>
 </dict>
 </plist>
+
