--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,13 +23,13 @@ workflows:
       - build/ipa/*.ipa
     publishing:
       app_store_connect:
-        # API Key Authentication (all 3 fields are REQUIRED)
+        # API Key Authentication
         api_key: $APP_STORE_CONNECT_API_KEY  # Environment variable name you set in Codemagic
-        key_id: $APPLE_KEY_ID                # Changed from `apple_key_id` to `key_id`
-        issuer_id: $APPLE_ISSUER_ID          # Changed from `apple_issuer_id` to `issuer_id`
+        key_id: $APPLE_KEY_ID                # Key ID (e.g., 3V3UA4GTAQ)
+        issuer_id: $APPLE_ISSUER_ID          # Issuer ID (e.g., 5f7e640c-e4a7-4e32-b364-631385816275)
 
-        # TestFlight configuration (nested under app_store_connect)
-        testflight:
-          # Beta group must be a LIST (even if only one group)
-          beta_groups: 
-            - "External Testers" 
+      # TestFlight configuration (separate from app_store_connect)
+      testflight:
+        # Beta group must be a LIST (even if only one group)
+        beta_groups: 
+          - "External Testers" 
