--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,33 +1,64 @@
 workflows:
-  ios-native-release:
-    name: "Harry Pokker - TestFlight Upload"
+  ios-native-workflow:
+    name: iOS Native
+    max_build_duration: 120
+    instance_type: mac_mini_m2
+    integrations:
+      app_store_connect: codemagic
     environment:
-      xcode: latest
+      ios_signing:
+        distribution_type: app_store
+        bundle_identifier: io.codemagic.sample.iosnative
       vars:
-        XCODE_PROJECT: "Harry Pokker.xcodeproj"
-        XCODE_SCHEME: "Harry Pokker"
+        BUNDLE_ID: "om.golstan.arkit.new.Zauber"
+        XCODE_WORKSPACE: "Harry Pokker.xcworkspace" # <-- Put the name of your Xcode workspace here
+        XCODE_SCHEME: "Harry Pokker" # <-- Put the name of your Xcode scheme here
+        APP_STORE_APPLE_ID: 6739430387
+      xcode: latest
+      cocoapods: default
     scripts:
-      - name: Build IPA
-        script: |
-          xcodebuild archive \
-            -project "$XCODE_PROJECT" \
-            -scheme "$XCODE_SCHEME" \
-            -configuration Release \
-            -archivePath build/HarryPokker.xcarchive
-
-          xcodebuild -exportArchive \
-            -archivePath build/HarryPokker.xcarchive \
-            -exportOptionsPlist ExportOptions.plist \
-            -exportPath build/ipa
+      - name: Install CocoaPods dependencies
+        script: | 
+          if ! pod --version &>/dev/null; then
+            echo "CocoaPods not installed. Installing CocoaPods..."
+            gem install cocoapods
+          fi
+          pod install
+      - name: Set up provisioning profiles settings on Xcode project
+        script: xcode-project use-profiles
+      - name: Increment build number
+        script: | 
+          cd $CM_BUILD_DIR
+          LATEST_BUILD_NUMBER=$(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID")
+          agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))
+      - name: Build ipa for distribution
+        script: | 
+          xcode-project build-ipa \
+            --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" \
+            --scheme "$XCODE_SCHEME"
     artifacts:
-      - build/ipa/*.ipa
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
     publishing:
+      email:
+        recipients:
+          - user_1@example.com
+          - user_2@example.com
+        notify:
+          success: true
+          failure: false
       app_store_connect:
-        # API Key Authentication
-        api_key: $APP_STORE_CONNECT_API_KEY  # Environment variable name you set in Codemagic
-        key_id: $APPLE_KEY_ID                # Key ID (e.g., 3V3UA4GTAQ)
-        issuer_id: $APPLE_ISSUER_ID          # Issuer ID (e.g., 5f7e640c-e4a7-4e32-b364-631385816275)
-        testflight:
-          # Beta group must be a LIST (even if only one group)
-          beta_groups: 
-            - "External Testers"
+        auth: integration
+
+        # Configuration related to TestFlight (optional)
+        # Note: This action is performed during post-processing.
+        submit_to_testflight: true
+        beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
+          - group name 1
+          - group name 2
+
+        # Configuration related to App Store (optional)
+        # Note: This action is performed during post-processing.
+        submit_to_app_store: false
