--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,64 +1,75 @@
 workflows:
-  ios-native-workflow:
-    name: iOS Native
-    max_build_duration: 120
-    instance_type: mac_mini_m2
-    integrations:
-      app_store_connect: codemagic
+  ios-workflow:
+    name: iOS Workflow 
+    # ....
     environment:
       ios_signing:
-        distribution_type: app_store
-        bundle_identifier: om.golstan.arkit.new.Zaube
-      vars:
-        BUNDLE_ID: "om.golstan.arkit.new.Zauber"
-        XCODE_WORKSPACE: "Harry Pokker.xcworkspace" # <-- Put the name of your Xcode workspace here
-        XCODE_SCHEME: "Harry Pokker" # <-- Put the name of your Xcode scheme here
-        APP_STORE_APPLE_ID: 6739430387
-      xcode: latest
-      cocoapods: default
-    scripts:
-      - name: Install CocoaPods dependencies
-        script: | 
-          if ! pod --version &>/dev/null; then
-            echo "CocoaPods not installed. Installing CocoaPods..."
-            gem install cocoapods
-          fi
-          pod install
-      - name: Set up provisioning profiles settings on Xcode project
-        script: xcode-project use-profiles
-      - name: Increment build number
-        script: | 
-          cd $CM_BUILD_DIR
-          LATEST_BUILD_NUMBER=$(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID")
-          agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))
-      - name: Build ipa for distribution
-        script: | 
-          xcode-project build-ipa \
-            --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" \
-            --scheme "$XCODE_SCHEME"
-    artifacts:
-      - build/ios/ipa/*.ipa
-      - /tmp/xcodebuild_logs/*.log
-      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
-      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
-    publishing:
-      email:
-        recipients:
-          - user_1@example.com
-          - user_2@example.com
-        notify:
-          success: true
-          failure: false
-      app_store_connect:
-        auth: integration
+        distribution_type: app_store # or: ad_hoc | development | enterprise
+        bundle_identifier: om.golstan.arkit.new.Zauber
 
-        # Configuration related to TestFlight (optional)
-        # Note: This action is performed during post-processing.
-        submit_to_testflight: true
-        beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
-          - group name 1
-          - group name 2
 
-        # Configuration related to App Store (optional)
-        # Note: This action is performed during post-processing.
-        submit_to_app_store: false
+
+# workflows:
+#   ios-native-workflow:
+#     name: iOS Native
+#     max_build_duration: 120
+#     instance_type: mac_mini_m2
+#     integrations:
+#       app_store_connect: codemagic
+#     environment:
+#       ios_signing:
+#         distribution_type: app_store
+#         bundle_identifier: om.golstan.arkit.new.Zaube
+#       vars:
+#         BUNDLE_ID: "om.golstan.arkit.new.Zauber"
+#         XCODE_WORKSPACE: "Harry Pokker.xcworkspace" # <-- Put the name of your Xcode workspace here
+#         XCODE_SCHEME: "Harry Pokker" # <-- Put the name of your Xcode scheme here
+#         APP_STORE_APPLE_ID: 6739430387
+#       xcode: latest
+#       cocoapods: default
+#     scripts:
+#       - name: Install CocoaPods dependencies
+#         script: | 
+#           if ! pod --version &>/dev/null; then
+#             echo "CocoaPods not installed. Installing CocoaPods..."
+#             gem install cocoapods
+#           fi
+#           pod install
+#       - name: Set up provisioning profiles settings on Xcode project
+#         script: xcode-project use-profiles
+#       - name: Increment build number
+#         script: | 
+#           cd $CM_BUILD_DIR
+#           LATEST_BUILD_NUMBER=$(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID")
+#           agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))
+#       - name: Build ipa for distribution
+#         script: | 
+#           xcode-project build-ipa \
+#             --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" \
+#             --scheme "$XCODE_SCHEME"
+#     artifacts:
+#       - build/ios/ipa/*.ipa
+#       - /tmp/xcodebuild_logs/*.log
+#       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
+#       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+#     publishing:
+#       email:
+#         recipients:
+#           - user_1@example.com
+#           - user_2@example.com
+#         notify:
+#           success: true
+#           failure: false
+#       app_store_connect:
+#         auth: integration
+
+#         # Configuration related to TestFlight (optional)
+#         # Note: This action is performed during post-processing.
+#         submit_to_testflight: true
+#         beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
+#           - group name 1
+#           - group name 2
+
+#         # Configuration related to App Store (optional)
+#         # Note: This action is performed during post-processing.
+#         submit_to_app_store: false
