--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,23 +7,23 @@ workflows:
       app_store_connect: codemagic
     environment:
       ios_signing:
-        distribution_type: development # or: ad_hoc | development | enterprise
+        distribution_type: development
         bundle_identifier: om.golstan.arkit.new.Zauber
       vars:
         BUNDLE_ID: "om.golstan.arkit.new.Zauber"
-        XCODE_WORKSPACE: "Harry Pokker.xcworkspace"  # <-- Use workspace instead of project file if it's a workspace
-        XCODE_SCHEME: "Harry Pokker"
+        XCODE_WORKSPACE: "Harry Pokker.xcworkspace"  # Correct workspace file
+        XCODE_SCHEME: "Harry Pokker"  # Ensure the scheme matches the one used in Xcode
         APP_STORE_APPLE_ID: 6739430387
       xcode: latest
       cocoapods: default
     scripts:
       - name: Install CocoaPods dependencies
         script: |
-          cd ./Harry\ Pokker
+          cd ./Harry\ Pokker  # Ensure this path is correct if you have spaces in the directory name
           pod init || echo "Podfile already exists"
           echo "platform :ios, '16.0'" > Podfile
           echo "use_frameworks!" >> Podfile
-          echo "project 'Harry Pokker.xcodeproj'" >> Podfile  # Ensure this is your project path
+          echo "workspace 'Harry Pokker.xcworkspace'" >> Podfile  # Correct the workspace reference
           echo "target 'Harry Pokker' do" >> Podfile
           echo "  pod 'Alamofire', '~> 5.6'" >> Podfile
           echo "  pod 'SwiftLint'" >> Podfile
@@ -32,12 +32,12 @@ workflows:
       - name: Set up provisioning profiles settings on Xcode project
         script: xcode-project use-profiles
       - name: Increment build number
-        script: | 
+        script: |
           cd $CM_BUILD_DIR
           LATEST_BUILD_NUMBER=$(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID")
           agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))
       - name: Build ipa for distribution
-        script: | 
+        script: |
           xcode-project build-ipa \
             --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" \
             --scheme "$XCODE_SCHEME"
@@ -56,10 +56,8 @@ workflows:
           failure: false
       app_store_connect:
         auth: integration
-
         submit_to_testflight: true
         beta_groups:
           - group name 1
           - group name 2
-
         submit_to_app_store: false
